{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 25,
  "lineage": "a9731651-0aff-a6ac-cd5e-b9bf7722c89d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:494873120327:instance/i-0aac2f075a4094ff9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-profile",
            "id": "i-0aac2f075a4094ff9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Jenkins_task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c402fdd8357633a4"
              }
            ],
            "primary_network_interface_id": "eni-0c402fdd8357633a4",
            "private_dns": "ip-10-0-1-158.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-44-192-109-153.compute-1.amazonaws.com",
            "public_ip": "44.192.109.153",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f66efc7d3027adc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04400dac8341720be",
            "tags": {
              "Name": "Jenkins-Control-Plane"
            },
            "tags_all": {
              "Name": "Jenkins-Control-Plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc689749709bb501"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "494873120327",
            "id": "i-0aac2f075a4094ff9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_security_group.jenkins_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494873120327:internet-gateway/igw-02a6df596d5bc434d",
            "id": "igw-02a6df596d5bc434d",
            "owner_id": "494873120327",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-igw"
            },
            "tags_all": {
              "Name": "devops-igw"
            },
            "vpc_id": "vpc-00cf0bbb9412dd4d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "494873120327",
            "id": "igw-02a6df596d5bc434d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494873120327:route-table/rtb-07863ff8e4d864a59",
            "id": "rtb-07863ff8e4d864a59",
            "owner_id": "494873120327",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a6df596d5bc434d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00cf0bbb9412dd4d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "494873120327",
            "id": "rtb-07863ff8e4d864a59",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09958ef5864d0cd1f",
            "region": "us-east-1",
            "route_table_id": "rtb-07863ff8e4d864a59",
            "subnet_id": "subnet-04400dac8341720be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "494873120327",
            "id": "rtbassoc-09958ef5864d0cd1f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494873120327:security-group/sg-0cc689749709bb501",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc689749709bb501",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "494873120327",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00cf0bbb9412dd4d5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "494873120327",
            "id": "sg-0cc689749709bb501",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494873120327:subnet/subnet-04400dac8341720be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04400dac8341720be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "494873120327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-public-subnet"
            },
            "tags_all": {
              "Name": "devops-public-subnet"
            },
            "vpc_id": "vpc-00cf0bbb9412dd4d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "494873120327",
            "id": "subnet-04400dac8341720be",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:494873120327:vpc/vpc-00cf0bbb9412dd4d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6871b23317a07a4",
            "default_route_table_id": "rtb-0092735788ea53f71",
            "default_security_group_id": "sg-085ef278272dd80e1",
            "dhcp_options_id": "dopt-0302ef3f71a5f3a10",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00cf0bbb9412dd4d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0092735788ea53f71",
            "owner_id": "494873120327",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-vpc"
            },
            "tags_all": {
              "Name": "devops-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "494873120327",
            "id": "vpc-00cf0bbb9412dd4d5",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}